# omni_triangle_controller

./: .cproject  .project  CMakeLists.txt  README.md  README.txt  package.xml
include/omni_triangle_controller/: odometry.h  omni_triangle_controller.h  speed_limiter.h
omni_triangle_controller/: .cproject  CMakeLists.txt  LICENSE  package.xml
omni_triangle_controller/include/omni_triangle_controller/: odometry.h~  omni_triangle_controller.h~  speed_limiter.h~
omni_triangle_controller/src/: odometry.cpp  odometry.cpp~  omni_triangle_controller.cpp  speed_limiter.cpp
src/: odometry.cpp  odometry.cpp~  omni_triangle_controller.cpp  omni_triangle_controller.cpp~  speed_limiter.cpp
