<package>
  <name>omni_triangle_controller</name>
  <version>0.9.1</version>
  <description>Controller for a omni_triangle drive mobile base.</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>

  <license>BSD</license>

  <author email="luke_liao@126.com.com">Bence Magyar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>

  <!--Tests-->
  <build_depend>rostest</build_depend>

  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/omni_triangle_controller_plugins.xml"/>
  </export>
</package>
